# ManyMC

./: .gitignore  CMakeLists.txt  README.md  build.sh  entitlements.plist
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
buildconfig/: BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
launcher/: Application.cpp
launcher/java/: JavaChecker.cpp  JavaInstallList.cpp
launcher/launch/steps/: CheckJava.cpp
launcher/minecraft/: MinecraftInstance.cpp
launcher/minecraft/auth/: MinecraftAccount.cpp  MinecraftAccount.h
launcher/resources/multimc/: multimc.qrc
launcher/ui/: MainWindow.cpp
launcher/ui/pages/instance/: VersionPage.cpp
launcher/ui/widgets/: LanguageSelectionWidget.cpp
notsecrets/: CMakeLists.txt  README.md
program_info/: CMakeLists.txt  logo.icns  polymc.qrc
